src/objects/Contacts_for_Suppliers__c.object
<CustomObject>
    <fields>
        <fullName>Business_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Company who supplies the contact and/or service.</description>
        <label>Business Supplier</label>
        <referenceTo>Business_Supplier__c</referenceTo>
        <relationshipLabel>Contacts for Suppliers</relationshipLabel>
        <relationshipName>Contacts_for_Suppliers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Please enter the contacts email address</description>
        <label>Email</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Please enter a brief description on what service the contact provides.</description>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Telephone_Mobile__c</fullName>
        <description>Please enter the mobile phone nunber for this contact.</description>
        <label>Telephone Mobile</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Telephone_Office__c</fullName>
        <description>Please enter the office telephone number for this contact.</description>
        <label>Telephone Office</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Contacts for Suppliers</label>
    <nameField>
        <label>Contacts for Suppliers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts for Suppliers</pluralLabel>
    <recordTypes>
        <fullName>Contacts_for_suppliers</fullName>
        <active>true</active>
        <label>Contacts for suppliers</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>